# vault

./: Cargo.toml  LICENSE  README.md  log.rs  main.rs  vault.rs
.github/workflows/: ci.yml  release.yml
src/: compress.rs  crypto.rs  custom_compressor.rs  log.rs  logger.rs  main.rs  utils.rs  vault.rs
