[package]
name = "vault"
version = "0.1.0"
edition = "2024"


[dependencies]
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
sha2 = "0.10"
bincode = "1.3"
rand = "0.8"
chrono = "0.4"
rpassword = "7.2"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
bitstream-io = "4.1.0"
flate2 = "1.0"