[package]
name = "vault"
version = "1.1.3"
edition = "2021"
authors = ["arjun7579 [Arjun R. Nair]"]
description = "A secure, production-grade file vault with authenticated encryption."
license = "MIT"

[dependencies]
# These are your external dependencies from crates.io
aes-gcm = "0.10"
argon2 = "0.5"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1.0"
indicatif = "0.18.0"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
zstd = "0.13"
serde_json = "1.0"
rand = "0.9.2"